--- a/hello/bin/.gitignore
+++ b/hello/bin/.gitignore
@@ -1,1 +1,68 @@
-/hello/
+/AccessEx.class
+/ArithmeticOperator.class
+/ArrayAccess.class
+/ArrayLength.class
+/ArrayforeachEx$Week.class
+/ArrayforeachEx.class
+/BitShiftOperator.class
+/Book.class
+/Book2.class
+/BreakExample.class
+/CP101.class
+/CP102.class
+/CP103.class
+/CP118.class
+/CP122.class
+/CP123.class
+/CP125.class
+/CP126.class
+/CP87.class
+/CP92.class
+/CP98.class
+/CircleArea.class
+/ContinueExample.class
+/DoWhileSample.class
+/ExceptionExample2.class
+/ForSample.class
+/Goods.class
+/GradeSwitch.class
+/Grading.class
+/Grading2.class
+/InputExample.class
+/IrregularArray.class
+/MainParameter.class
+/MethodSample.class
+/MyExp.class
+/NestedLoop.class
+/Person.class
+/ReturnArray.class
+/SalesRevenue.class
+/Sample.class
+/ScannerExam.class
+/StaticSample.class
+/TernaryOperator.class
+/TypeConversion.class
+/WhileSample.class
+/chapter04.class
+/chapter042.class
+/chapter044.class
+/ex.class
+/exa.class
+/hello.class
+/override.class
+/p83.class
+/samp.class
+/Ex2.class
+/StaticSample2.class
+/CurrencyConverter.class
+/StaticMember.class
+/test.class
+/MyClass.class
+/ColorPoint.class
+/Point.class
+/Student.class
+/PersonSt.class
+/ConstructerEx.class
+/A.class
+/B.class
+/C.class
